--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		#monitor{position: fixed; background-color: black;
 		 top: 0; right: 0; padding: 5px;
 		 width: 100px; height: 20px;
-		 color: yellow;}
+		 color: gray;}
 
 		#t1{width: 600px; position: absolute; left: 150px; top: 200px;
 			font-size: 50px; opacity: 0;
@@ -150,11 +150,10 @@
 	<section style="height: 300px; background-color: black; font-size: 15px; color: white; font-weight: lighter;">
 		<a href="https://www.converse.co.kr">
 			<img src="logo copy.png" style="height: 200px; left: 620px; top: 50px;" >
-			</a>
+		</a>
 	<div style="left: 650px; top:250px; position: absolute;">
-	Copyrightⓒ2019 moonkyunga All rights reserved.</div>
+		Copyrightⓒ2019 moonkyunga All rights reserved.</div>
 	</section>
-
 	<div id="monitor"></div>
 	<script type="text/javascript">
 		window.onscroll = function(){
@@ -234,10 +233,6 @@
 		else{col9.style.animation = "";}
 		if(t > 7400){col10.style.animation = "op2 0.5s forwards";}
 		else{col10.style.animation = "";}
-
-
-
-
 
 	}
 	</script>
