--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link href="https://fonts.googleapis.com/css?family=Noto+Sans+KR&display=swap" rel="stylesheet">
 	<style type="text/css">
 		section{height: 850px; position: relative; 
 			font-family: 'Noto Sans KR', sans-serif; color:black;}
