--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<link href="https://fonts.googleapis.com/css?family=Noto+Sans+KR&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Noto+Sans&display=swap" rel="stylesheet">
 	<style type="text/css">
 		section{height: 850px; position: relative; 
 			font-family: 'Noto Sans KR', sans-serif; color:black;}
@@ -26,18 +27,18 @@
 		 color: gray;}
 
 		#t1{width: 600px; position: absolute; left: 150px; top: 200px;
-			font-size: 50px; opacity: 0;
+			font-size: 50px; opacity: 0; font-family: 'Noto Sans', sans-serif;
 			font-weight: bold; display: inline-block;}
 		#t2{width: 600px; position: absolute; left: 150px; top: 300px;
 			font-size: 28px; opacity: 0; 
-			font-weight: bold; display: inline-block; line-height: 28pt;
+			font-weight: bold; display: inline-block; line-height: 30pt;
 			color: gray;}
 		#t3{width: 600px; position: absolute; left: 550px; top: 100px;
 			font-size: 50px; opacity: 0; 
 			font-weight: bold; display: inline-block;}
 		#t4{width: 600px; position: absolute; left: 550px; top: 200px;
 			font-size: 28px; opacity: 0; 
-			font-weight: bold; display: inline-block; line-height: 28pt;
+			font-weight: bold; display: inline-block; line-height: 30pt;
 			color: gray;}
 		#t5{width: 700px; position: absolute; left: 550px; top: 250px;
 			font-size: 50px; opacity: 0;
@@ -45,7 +46,7 @@
 			font-family: 'Noto Sans KR', sans-serif; color:black;}
 		#t6{width: 600px; position: absolute; left: 550px; top: 550px;
 			font-size: 28px; opacity: 0;
-			font-weight: bold; display: inline-block; line-height: 28pt;
+			font-weight: bold; display: inline-block; line-height: 30pt;
 			color: gray;
 			font-family: 'Noto Sans KR', sans-serif; }
 		#t7{width: 600px; position: absolute; left: 900px; top: 300px;
@@ -53,15 +54,15 @@
 			font-weight: bold; display: inline-block;}
 		#t8{width: 600px; position: absolute; left: 900px; top: 400px;
 			font-size: 28px; opacity: 0; 
-			font-weight: bold; display: inline-block; line-height: 28pt;
+			font-weight: bold; display: inline-block; line-height: 30pt;
 			color: gray;}
 		#t9{width: 600px; position: absolute; left: 700px; top: 700px;
 			font-size: 50px; opacity: 1; 
-			font-weight: bold; display: inline-block; line-height: 28pt;
+			font-weight: bold; display: inline-block;
 			color: black;}
 		#t10{width: 600px; position: absolute; left: 550px; top: 800px;
 			font-size: 28px; opacity: 1; 
-			font-weight: bold; display: inline-block; line-height: 28pt;
+			font-weight: bold; display: inline-block; line-height: 30pt;
 			color: gray;}
 		
 		#a{background: url(all1.png); 
